add comprasbyuser
